Added user profile API
