# app/serializers/api/v1/profile_serializer.rb
@@ -2,10 +2,12 @@
 module Api
   module V1
     class ProfileSerializer < ActiveModel::Serializer
-      def attributes(*_args)
-        object.attributes.symbolize_keys
-      end
+      attributes :id, :email, :class_name, :graduation, :major, :status, :attending_university,
+      :high_school, :from_location, :gender, :religion, :language, :date_of_birth, :favourite_quotes,
 
+      def email
+        object.user.email
+      end
     end
   end
 end
